# bitterbeat

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/button/: CMakeLists.txt
src/entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/game/: CMakeLists.txt  Game.cpp  Game.hpp
src/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/particle/: CMakeLists.txt  Particle.cpp  Particle.hpp
src/renderer/: CMakeLists.txt
src/world/: CMakeLists.txt  World.hpp
tests/: CMakeLists.txt  test_placeholder.cpp
